noticed gap at bottom of footer. Re-did sticky footing code to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+}
+
+html, body {
+    height: 100%
 }
 
 body {
@@ -9,13 +14,6 @@ body {
     background-color: #fff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 25px;
-}
-
-.container {
-    width: 960px;
-    margin: 0 auto;
-    min-height: 100%;
-    clear: both;
 }
 
 h1, h2, h3 { 
@@ -32,6 +30,14 @@ h2 {
     font-size: 28px;
 }
 
+/*  Main Container */
+.container {
+    width: 960px;
+    margin: 0 auto;
+    min-height: 100%;
+    clear: both;
+    margin-bottom: -60px;
+}
 
 
 /*  Header */
@@ -109,35 +115,50 @@ nav a:first-child {
 
 /* Portfolio */
 .projects {
+    position: absolute;
 
 }
 
 .left {
     float: left;
-    /* background-color: red; */
+    background-color: red;
+    
 
 }
 
 .right {
     float: left;
-    /* background-color:blue; */
+    background-color:blue;
 
 }
 
 .left, .right {
     padding: 20px 0 20px 20px;
-    text-align: center;
+    margin-bottom: 20px;
+    position: relative;
+    
 }
 
 .projects img {
-    opacity: .7;
+    opacity: .1;
+    
+}
+
+.projects h3 {
+    background-color: #4aaaa5;
+    height: 70px;
+    width: 200px;
+    color: #777777;
+    text-align: center;
+    padding: 15px;
+    /* position: absolute; */
+    /* top: 30px; */
+    /* bottom: 20px; */
 }
 
 /* Footer */
 
-.footer .push {
-    height: 60px;
-}
+
 
 footer {
     background-color: #666666;
@@ -145,10 +166,18 @@ footer {
     width: 100%;
     border-top: 8px solid #4aaaa5;
     text-align: center;
-    height: 60px;
 }
 
 footer p {
     padding-top: 10px;
     font-size: 12px;
+}
+
+.container::after {
+    content: "";
+    display: block;
+}
+
+.footer, .container::after {
+    height: 60px
 }
